--- a/lessons/debug.html
+++ b/lessons/debug.html
@@ -87,7 +87,8 @@ function generateChart(dataArray) {
       ]
     },
     options: {
-      responsive: true,
+      responsive: false,
+      maintainAspectRatio: false,
       scales: {
         y: {
           beginAtZero: true,
