--- a/lessons/debug2.html
+++ b/lessons/debug2.html
@@ -43,6 +43,8 @@ new Chart(document.getElementById('barGraph'), {
     }]
   },
   options: {
+    responsive: false,
+    maintainAspectRatio: false,
     scales: {
       y: { beginAtZero: true }
     }
@@ -77,6 +79,8 @@ new Chart(document.getElementById('histogram'), {
     }]
   },
   options: {
+    responsive: false,
+    maintainAspectRatio: false,
     scales: {
       y: { beginAtZero: true }
     }
