--- a/lessons/lesson_1_1.html
+++ b/lessons/lesson_1_1.html
@@ -1,4 +1,690 @@
-<p>This is Lesson 1.1 on Variables & Expressions.</p>
-<p>Example: If <code>x + 3 = 5</code>, then <code>x = 2</code>.</p>
+<!--css for hints-->
+<style>
+	.hint-sequence {
+		margin-bottom: 20px;
+		font-family: Arial, sans-serif;
+		font-size: 14;
+    }
 
-<button onclick="markLessonComplete('1_1'); this.disabled = true;">✓ Mark as Complete</button>
+    .hint-button {
+		background-color: #007BFF;
+		color: white;
+		padding: 8px 16px;
+		border: none;
+		border-radius: 2px;
+		cursor: pointer;
+		margin-top: 3px;
+		display: inline-block;
+		font-size: 10;
+    }
+
+    .hint {
+		white-space: pre-wrap;
+		color: #333;
+		margin: 1px 0;
+		display: none; /* hide completely, no space */
+	}
+</style>
+<!--css for answer checking-->
+<style>
+  .question-row {
+    display: flex;
+    gap: 30px; /* space between questions */
+    margin-bottom: 20px;
+  }
+
+  .question {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: Arial, sans-serif;
+    border: 1px solid #ccc;
+    padding: 10px;
+    border-radius: 6px;
+    width: 150px;
+  }
+
+  .question label {
+    margin-bottom: 8px;
+  }
+
+  input[type="number"] {
+    padding: 6px 10px;
+    font-size: 16px;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 6px;
+  }
+
+  .result {
+    font-weight: bold;
+    min-height: 1.2em;
+  }
+
+  .correct {
+    color: green;
+	font-size: 0px;
+  }
+
+  .incorrect {
+    color: red;
+	font-size: 0px;
+	
+  }
+
+  button {
+    padding: 8px 18px;
+    font-size: 16px;
+    cursor: pointer;
+    margin-top: 10px;
+  }
+
+  #finalMessage {
+    font-weight: bold;
+    font-size: 18px;
+    margin-top: 10px;
+  }
+</style>
+<!--css for charts-->
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 20px;
+    }
+    .chart-container {
+      width: 400px;
+      height: 250px;
+      margin: 20px;
+    }
+    .charts-grid {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+    }
+  </style>
+<h2>Packet one</h2>
+<hr>
+<p>Solve for F(4) and F(5).</p>
+<p> F(n) = 4.5n + 1</p>
+<p>Output starting at 1.</p>
+<b>( 5.5 , 10 , 14.5 , ? , ? , 28.5 )</b>
+<div class="hint-sequence">
+	<button class="hint-button">Not Sure where to start?</button>
+    <div class="hint" data-text="Type (4.5 * n) + 1 in replacing n with the position in the sequence you want."></div>
+	<p></p>
+    <button class="hint-button">Need some help?</button>
+    <div class="hint" data-text="Put 4 in place of n to get the first missing number."></div>
+	<p></p>
+    <button class="hint-button">Need a bit more help?</button>
+    <div class="hint" data-text="Put 5 in place of n to get the seccond missing number."></div>
+</div>
+<div class="question-row">
+	<div class="question" data-answer="19.5">
+		<label>F(4) = </label>
+		<input type="number" />
+		<div class="result"></div>
+	</div>
+
+	<div class="question" data-answer="24">
+		<label>F(5) = </label>
+		<input type="number" />
+		<div class="result"></div>
+	</div>
+</div>
+<hr>
+<p>Solve for F(4) and F(6).</p>
+<p> F(n) = 2ⁿ + 3</p>
+<p>Output starting at 1.</p>
+<b>( 5 , 7 , 11 , ? , 35 , ? )</b>
+<div class="hint-sequence">
+	<button class="hint-button">Not Sure where to start?</button>
+    <div class="hint" data-text="Type (2 ^ n) + 3 in replacing n with the position in the sequence you want."></div>
+	<p></p>
+    <button class="hint-button">Need some help?</button>
+    <div class="hint" data-text="Put 4 in place of n to get the first missing number."></div>
+	<p></p>
+    <button class="hint-button">Need a bit more help?</button>
+    <div class="hint" data-text="Put 6 in place of n to get the seccond missing number."></div>
+</div>
+<div class="question-row">
+	<div class="question" data-answer="19">
+		<label>F(4) = </label>
+		<input type="number" />
+		<div class="result"></div>
+	</div>
+
+	<div class="question" data-answer="67">
+		<label>F(6) = </label>
+		<input type="number" />
+		<div class="result"></div>
+	</div>
+</div>
+<hr>
+<p>Solve for F(2) and F(6).</p>
+<p> F(n) = 3ⁿ</p>
+<p>Output starting at 1.</p>
+<b>( 3 , ? , 27 , 81 , 243 , ? )</b>
+<div class="question-row">
+	<div class="question" data-answer="9">
+		<label>F(2) = </label>
+		<input type="number" />
+		<div class="result"></div>
+	</div>
+
+	<div class="question" data-answer="729">
+		<label>F(6) = </label>
+		<input type="number" />
+		<div class="result"></div>
+	</div>
+</div> 
+<hr>
+<p>Solve for F(3) and F(5).</p>
+<p> F(n) = 4ⁿ</p>
+<p>Output starting at 1.</p>
+<b>( 4 , 16 , ? , 256 , ? , 4096 )</b>
+<div class="question-row">
+	<div class="question" data-answer="64">
+		<label>F(3) = </label>
+		<input type="number" />
+		<div class="result"></div>
+	</div>
+
+	<div class="question" data-answer="1024">
+		<label>F(5) = </label>
+		<input type="number" />
+		<div class="result"></div>
+	</div>
+</div>
+<hr>
+<p>Solve for F(4), F(5), and F(6).</p>
+<p> F(n) = 7n + 8.5</p>
+<p>Output starting at 1.</p>
+<b>( 15.5 , 22.5 , 29.5 , ? , ? , ? )</b>
+<div class="question-row">
+	<div class="question" data-answer="36.5">
+		<label>F(4) = </label>
+		<input type="number" />
+		<div class="result"></div>
+	</div>
+
+	<div class="question" data-answer="43.5">
+		<label>F(5) = </label>
+		<input type="number" />
+		<div class="result"></div>
+	</div>
+
+	<div class="question" data-answer="50.5">
+		<label>F(6) = </label>
+		<input type="number" />
+		<div class="result"></div>
+	</div>
+</div>
+<hr>
+<p>Solve for X.</p>
+<p> 4X + 3 = X + 13.5</p>
+<div class="hint-sequence">
+	<button class="hint-button">Not Sure where to start?</button>
+    <div class="hint" data-text="Try isolating X on one side of the equation."></div>
+	<p></p>
+    <button class="hint-button">Step 1</button>
+    <div class="hint" data-text="Isolate X by subtracting 1X from both sides to get 3X + 3 = 13.5."></div>
+	<p></p>
+    <button class="hint-button">Step 2</button>
+    <div class="hint" data-text="Subtract 3 from both sides to get 3X = 10.5."></div>
+		<p></p>
+	<button class="hint-button">Step 3</button>
+    <div class="hint" data-text="Divide by 3 on both sides to get X = 3.5."></div>
+</div>
+<div class="question" data-answer="3.5">
+    <label>X = </label>
+    <input type="number" />
+    <div class="result"></div>
+</div> 
+<hr>
+<p>Solve for X.</p>
+<p> 3X + 12 = -2(X - 1)</p>
+<div class="question" data-answer="-2">
+    <label>X = </label>
+    <input type="number" />
+    <div class="result"></div>
+</div>
+<hr>
+<p>Solve for X.</p>
+<p> 7X + 11 = 6(X + 3)</p>
+<div class="question" data-answer="7">
+    <label>X = </label>
+    <input type="number" />
+    <div class="result"></div>
+</div>
+<hr>
+<p>Solve for X and Y.</p>
+<p> 5X + 8Y = 47</p>
+<p> 2x + 3Y = 18</p>
+<div class="hint-sequence">
+	<button class="hint-button">Not Sure where to start?</button>
+    <div class="hint" data-text="Try isolating the X or Y value"></div>
+	<p></p>
+    <button class="hint-button">Step 1</button>
+    <div class="hint" data-text="Isolate Y by multiplying the bottom equation by 2.5 to get X on both sides to be equal. (5X + 7.5Y = 45) Then subtract it from the top equation. Once you subtracted the modified bottom equation from the top one, you now have 0.5Y = 2."></div>
+	<p></p>
+	<button class="hint-button">Step 2</button>
+    <div class="hint" data-text="Divide both sides of 0.5Y = 2 by 0.5 to get Y = 4. Now chose a line to substitute the Y into for this example we will use the second equation 2X + 3(4) = 18."></div>
+	<p></p>
+	<button class="hint-button">Step 3</button>
+    <div class="hint" data-text="Once you have that distribute to get 2X + 12 = 18. Now subtract 12 from both sides to get 2X = 6. Then just divide by 2 on both sides to get X = 3"></div>
+</div>
+<div class="question-row">
+	<div class="question" data-answer="3">
+		<label>X = </label>
+		<input type="number" />
+		<div class="result"></div>
+	</div>
+
+	<div class="question" data-answer="4">
+		<label>Y = </label>
+		<input type="number" />
+		<div class="result"></div>
+	</div>
+</div>
+<hr>
+<p>Solve for X and Y.</p>
+<p> 4X +  Y = 37</p>
+<p> X + 7Y = 43</p>
+<div class="question-row">
+	<div class="question" data-answer="8">
+		<label>X = </label>
+		<input type="number" />
+		<div class="result"></div>
+	</div>
+
+	<div class="question" data-answer="5">
+		<label>Y = </label>
+		<input type="number" />
+		<div class="result"></div>
+	</div>
+</div>
+<hr>
+<p>For the following problems find the Max, Min, X-intercept, and Y-intercept for the X and Y intercept put in the value that isn't 0 (Ex  2,0 put in 2).</p>
+<div class="chart-container"><canvas id="chart1"></canvas></div>
+<div class="hint-sequence">
+	<button class="hint-button">Not Sure where to start?</button>
+    <div class="hint" data-text="Try hovering your cursor over the points."></div>
+	<p></p>
+    <button class="hint-button">Step 1</button>
+    <div class="hint" data-text="Find the highest point of the graph to get 11."></div>
+	<p></p>
+    <button class="hint-button">Step 2</button>
+    <div class="hint" data-text="Find the lowest point of the graph to get -15."></div>
+	<p></p>
+	<button class="hint-button">Step 3</button>
+    <div class="hint" data-text="Find the Y intercept by hovering over the first point to get 0,5 put in 5."></div>
+	<p></p>
+	<button class="hint-button">Step 4</button>
+    <div class="hint" data-text="Find the X intercept by hovering over the the points to find one at a Y value of 0 you will get 12,0 put in 12."></div>
+</div>
+<div class="question-row">
+	<div class="question" data-answer="11">
+		<label>Max = </label>
+		<input type="number" />
+		<div class="result"></div>
+	</div>
+
+	<div class="question" data-answer="-15">
+		<label>Min = </label>
+		<input type="number" />
+		<div class="result"></div>
+	</div>
+	
+	<div class="question" data-answer="12">
+		<label>X-intercept = </label>
+		<input type="number" />
+		<div class="result"></div>
+	</div>
+
+	<div class="question" data-answer="5">
+		<label>Y-intercept = </label>
+		<input type="number" />
+		<div class="result"></div>
+	</div>
+</div>
+<hr>
+<div class="chart-container"><canvas id="chart2"></canvas></div>
+<div class="question-row">
+	<div class="question" data-answer="17">
+		<label>Max = </label>
+		<input type="number" />
+		<div class="result"></div>
+	</div>
+
+	<div class="question" data-answer="-8">
+		<label>Min = </label>
+		<input type="number" />
+		<div class="result"></div>
+	</div>
+	
+	<div class="question" data-answer="9">
+		<label>X-intercept = </label>
+		<input type="number" />
+		<div class="result"></div>
+	</div>
+
+	<div class="question" data-answer="-8">
+		<label>Y-intercept = </label>
+		<input type="number" />
+		<div class="result"></div>
+	</div>
+</div>
+<hr>
+<div class="chart-container"><canvas id="chart3"></canvas></div>
+<div class="question-row">
+	<div class="question" data-answer="10">
+		<label>Max = </label>
+		<input type="number" />
+		<div class="result"></div>
+	</div>
+
+	<div class="question" data-answer="-12">
+		<label>Min = </label>
+		<input type="number" />
+		<div class="result"></div>
+	</div>
+	
+	<div class="question" data-answer="10">
+		<label>X-intercept = </label>
+		<input type="number" />
+		<div class="result"></div>
+	</div>
+
+	<div class="question" data-answer="10">
+		<label>Y-intercept = </label>
+		<input type="number" />
+		<div class="result"></div>
+	</div>
+</div>
+<hr>
+<div class="chart-container"><canvas id="chart4"></canvas></div>
+<div class="question-row">
+	<div class="question" data-answer="10">
+		<label>Max = </label>
+		<input type="number" />
+		<div class="result"></div>
+	</div>
+
+	<div class="question" data-answer="-7">
+		<label>Min = </label>
+		<input type="number" />
+		<div class="result"></div>
+	</div>
+	
+	<div class="question" data-answer="10">
+		<label>X-intercept = </label>
+		<input type="number" />
+		<div class="result"></div>
+	</div>
+
+	<div class="question" data-answer="-7">
+		<label>Y-intercept = </label>
+		<input type="number" />
+		<div class="result"></div>
+	</div>
+</div>
+<hr>
+<div class="chart-container"><canvas id="chart5"></canvas></div>
+<div class="question-row">
+	<div class="question" data-answer="6">
+		<label>Max = </label>
+		<input type="number" />
+		<div class="result"></div>
+	</div>
+
+	<div class="question" data-answer="-12">
+		<label>Min = </label>
+		<input type="number" />
+		<div class="result"></div>
+	</div>
+	
+	<div class="question" data-answer="9">
+		<label>X-intercept = </label>
+		<input type="number" />
+		<div class="result"></div>
+	</div>
+
+	<div class="question" data-answer="6">
+		<label>Y-intercept = </label>
+		<input type="number" />
+		<div class="result"></div>
+	</div>
+</div>
+<hr>
+<p>Solve for F(15).</p>
+<p> F(n) = 8x + 1</p>
+<div class="question-row">
+	<div class="question" data-answer="121">
+		<label>F(15) = </label>
+		<input type="number" />
+		<div class="result"></div>
+	</div>
+</div>
+<hr>
+<p>Solve for F(6).</p>
+<p> F(n) = 3ⁿ + 2</p>
+<div class="question-row">
+	<div class="question" data-answer="731">
+		<label>F(6) = </label>
+		<input type="number" />
+		<div class="result"></div>
+	</div>
+</div>
+<hr>
+<p>Solve for X.</p>
+<p> 7X + 9 = 4(X + 15)</p>
+<div class="question-row">
+	<div class="question" data-answer="17">
+		<label>X = </label>
+		<input type="number" />
+		<div class="result"></div>
+	</div>
+</div>
+<hr>
+<p>Solve for X and Y.</p>
+<p> 3X + 4Y = 112</p>
+<p> X + 8Y = 152</p>
+<div class="question-row">
+	<div class="question" data-answer="12">
+		<label>X = </label>
+		<input type="number" />
+		<div class="result"></div>
+	</div>
+	
+	<div class="question" data-answer="19">
+		<label>Y = </label>
+		<input type="number" />
+		<div class="result"></div>
+	</div>
+</div>
+<hr>
+<p>Find the Max, Min, X-intercept, and Y-intercept for the X and Y intercept put in the value that isn't 0 (Ex  0,8 put in 8).</p>
+<div class="chart-container"><canvas id="chart6"></canvas></div>
+<div class="question-row">
+	<div class="question" data-answer="13">
+		<label>Max = </label>
+		<input type="number" />
+		<div class="result"></div>
+	</div>
+
+	<div class="question" data-answer="-9">
+		<label>Min = </label>
+		<input type="number" />
+		<div class="result"></div>
+	</div>
+	
+	<div class="question" data-answer="10">
+		<label>X-intercept = </label>
+		<input type="number" />
+		<div class="result"></div>
+	</div>
+
+	<div class="question" data-answer="-9">
+		<label>Y-intercept = </label>
+		<input type="number" />
+		<div class="result"></div>
+	</div>
+</div>
+<hr>
+<button id="checkAllBtn">Check Answers</button>
+<span id="finalMessage"></span>
+<!--js for hints-->
+<script>
+    function typeText(element, text, speed = 20) {
+		element.textContent = '';
+		element.style.display = 'block';  // show the element now
+		let i = 0;
+		const interval = setInterval(() => {
+			element.textContent += text[i];
+			i++;
+			if (i >= text.length) {
+			clearInterval(interval);
+			}
+		}, speed);
+	}
+
+    document.querySelectorAll('.hint-sequence').forEach(sequence => {
+		const buttons = sequence.querySelectorAll('.hint-button');
+		const hints = sequence.querySelectorAll('.hint');
+
+		buttons.forEach((button, index) => {
+			// Hide all buttons except first
+			if (index !== 0) {
+			button.style.display = 'none';
+			}
+
+			button.addEventListener('click', () => {
+			button.style.display = 'none';
+
+			const hint = hints[index];
+			const text = hint.getAttribute('data-text');
+			typeText(hint, text);
+
+			if (buttons[index + 1]) {
+				buttons[index + 1].style.display = 'inline-block';
+			}
+			});
+		});
+	});
+</script>
+<!--js for answer check-->
+<script>
+  const maxAttempts = 3;
+  const attemptsMap = new Map();
+  const correctMap = new Map();
+  document.querySelectorAll('.question').forEach(q => {
+    attemptsMap.set(q, 0);
+    correctMap.set(q, false);
+  });
+  let totalCorrect = 0;
+  document.getElementById('checkAllBtn').addEventListener('click', () => {
+    const questions = document.querySelectorAll('.question');
+    let correctCountThisCheck = 0;
+    questions.forEach(question => {
+      const input = question.querySelector('input[type="number"]');
+      const result = question.querySelector('.result');
+      const correctAnswer = Number(question.getAttribute('data-answer'));
+      const rawValue = input.value.trim();
+      if (rawValue === "") {
+        result.textContent = "";
+        result.className = "result";
+        return;
+      }
+      const userAnswer = Number(rawValue);
+      let currentAttempts = attemptsMap.get(question) || 0;
+      let alreadyCorrect = correctMap.get(question);
+      if (alreadyCorrect) {
+        correctCountThisCheck++;
+        result.textContent = "✅ Correct!";
+        result.className = "result correct";
+        return;
+      }
+      if (userAnswer === correctAnswer) {
+        result.textContent = "✅ Correct!";
+        result.className = "result correct";
+        input.disabled = true;
+        correctMap.set(question, true);
+        totalCorrect++;
+        correctCountThisCheck++;
+      } else {
+        currentAttempts++;
+        attemptsMap.set(question, currentAttempts);
+        if (currentAttempts >= maxAttempts) {
+          input.disabled = true;
+          result.textContent = "❌ Incorrect (max attempts)";
+          result.className = "result incorrect";
+        } else {
+          result.textContent = "❌ Incorrect, try again.";
+          result.className = "result incorrect";
+        }
+      }
+    });
+    const total = questions.length;
+    const finalMessage = document.getElementById('finalMessage');
+    finalMessage.textContent = `Score: ${correctCountThisCheck}/${total}`;
+    finalMessage.style.color = correctCountThisCheck === total ? 'green' : 'black';
+    console.log('Total correct so far:', totalCorrect);
+  });
+</script>
+<!--js for charts-->
+<script>
+    const datasetsArray = [
+	[5, 6, 7, 9, 11, 10, 8, 6, 4, 2, 1, 0, -1, -2, -3, -5, -6, -7, -9, -10, -11, -12, -13, -14, -15],
+	[-8, -7, -6, -5, -4, -3, -2, -1, 0, 1, 3, 5, 6, 8, 9, 10, 11, 12, 12, 13, 14, 15, 15, 16, 17],
+	[10, 9, 8, 7, 6, 5, 4, 2, 1, 0, -1, -2, -3, -4, -5, -6, -6, -7, -8, -9, -10, -10, -11, -11, -12],
+	[-7, -6, -6, -5, -4, -3, -2, -2, -1, 0, 1, 2, 2, 3, 4, 5, 6, 6, 7, 7, 8, 8, 9, 9, 10],
+	[6, 6, 5, 4, 3, 3, 2, 1, 0, -1, -2, -3, -4, -4, -5, -5, -6, -7, -7, -8, -9, -10, -11, -11, -12],
+	[-9, -8, -7, -6, -5, -4, -3, -2, -1, 0, 1, 1, 2, 3, 4, 5, 5, 6, 7, 8, 9, 10, 11, 12, 13]
+	];
+    const labels = Array.from({ length: 25 }, (_, i) => ` ${i}`);
+	function createChart(ctxId, data) {
+	const ctx = document.getElementById(ctxId).getContext('2d');
+	new Chart(ctx, {
+		type: 'line',
+		data: {
+		labels: labels,
+		datasets: [{
+			data: data,
+			borderColor: 'rgba(75, 192, 192, 1)',
+			backgroundColor: 'rgba(75, 192, 192, 0.2)',
+			fill: true,
+			tension: 0
+		}]
+		},
+		options: {
+		responsive: true,
+		plugins: {
+			legend: {
+			display: false
+			},
+			tooltip: {
+			callbacks: {
+				label: context => {
+				const x = context.label;
+				const xIndex = context.dataIndex + 1;
+				const y = context.parsed.y;
+				return `(${xIndex}, ${y})`;
+				}
+			}
+			}
+		},
+		scales: {
+			y: {
+			beginAtZero: true
+			}
+		}
+		}
+		});
+	}
+    datasetsArray.forEach((dataSet, i) => {
+		createChart(`chart${i + 1}`, dataSet);
+	});
+  </script>
+  
+<!--Nice-->
