--- a/index.html
+++ b/index.html
@@ -128,28 +128,12 @@
     <h2>Math Units</h2>
 
     <div class="unit">
-      <div class="unit-title" onclick="toggleLessons(this)">Unit 1: Algebra</div>
+      <div class="unit-title" onclick="toggleLessons(this)">Questions</div>
       <div class="lessons">
-        <div class="lesson" data-id="1_1" data-file="lesson_1_1.html">Lesson 1.1 <span class="check">✓</span></div>
-        <div class="lesson" data-id="1_2" data-file="lesson_1_2.html">Lesson 1.2 <span class="check">✓</span></div>
-      </div>
-    </div>
-
-    <div class="unit">
-      <div class="unit-title" onclick="toggleLessons(this)">Unit 2: Geometry</div>
-      <div class="lessons">
-        <div class="lesson" data-id="2_1" data-file="lesson_2_1.html">Lesson 2.1 <span class="check">✓</span></div>
-        <div class="lesson" data-id="2_2" data-file="lesson_2_2.html">Lesson 2.2 <span class="check">✓</span></div>
+        <div class="lesson" data-id="1_1" data-file="lesson_1_1.html">Packet 1 <span class="check"></span></div>
       </div>
     </div>
 	
-	<div class="unit">
-      <div class="unit-title" onclick="toggleLessons(this)">Unit 3: Debug</div>
-      <div class="lessons">
-        <div class="lesson" data-id="debug" data-file="debug.html">Debug essentials<span class="check">✓</span></div>
-		<div class="lesson" data-id="debug2" data-file="debug2.html">Debug essentials<span class="check">✓</span></div>
-      </div>
-    </div>
   </div>
 
   <div class="container">
