--- a/lessons/home.html
+++ b/lessons/home.html
@@ -25,6 +25,6 @@
  <div class="container">
     <div class="main-content" id="main-content">
       <div class="lesson-title">Welcome to the Math Site</div>
-      <div class="lesson-description">Click the menu icon to browse units and lessons.</div>
+      <div class="lesson-description">Click the menu icon to browse available question packets.</div>
     </div>
   </div>
